--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
 
         function redraw() {
 
-            ctx.clearRect(0, 0, $canvas.attr('width'), $canvas.attr('height')); // Fill in the canvas with white
+            ctx.clearRect(0, 0, canvasWidth, canvasHeight); // Fill in the canvas with white
                   
             ctx.strokeStyle = "#df4b26";
             ctx.lineJoin = "round";
@@ -70,7 +70,7 @@
               }
         };
 
-        $('#canvas').mousedown(function(e){
+        $canvas.mousedown(function(e){
           var mouseX = e.pageX - this.offsetLeft;
           var mouseY = e.pageY - this.offsetTop;
         
@@ -80,7 +80,7 @@
         });
 
 
-        $('#canvas').mousemove(function(e){
+        $canvas.mousemove(function(e){
             if (paint) {
                 addClick(e.pageX - this.offsetLeft, e.pageY - this.offsetTop, true)
                 redraw();
@@ -88,7 +88,7 @@
         });
 
        
-        $('#canvas').on('mouseup mouseleave', function(e) {
+        $canvas.on('mouseup mouseleave', function(e) {
             paint = false;
         });
 
