--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
     <footer>Brought to you by Alex Normand & Suley M.</footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script defer>
+    <script>
     $(function() {
 
 
