--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -11,7 +11,7 @@ a
 
 #main
 	background: white
-	box-shadow: 0 0 8px #DDD
+	box-shadow: 0 0 10px #888
 	width: 800px
   margin: auto
   padding: 10px
