--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -27,14 +27,14 @@ a
   text-shadow: 0 1px 2px #010202
 
 
-#clearCanvas
-  display: block
+button
+  display: inline-block
   margin: 5px 0 0 5px
 
 #canvas
   border: 1px dashed #DDD
+  display: block
   margin: 10px
- 
 
 
 footer
