--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,7 @@
     </header>
     <div id="main">
         <button id="clearCanvas">Clear Canvas</button>
+        <button id="submitDrawing">Submit Drawing</button>
         <canvas id="canvas" height="400" width="600"></canvas>
 	</div>
 
