fixed stylus middleware config

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -1,5 +1,4 @@
-
-@import 'public/css/normalize'
+@import 'normalize'
 
 body
   background: #E7E9EB 
@@ -40,3 +39,5 @@ button
 footer
   text-align: center
   margin-top: 20px
+
+
