--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -19,7 +19,8 @@ a
   ol
     float: left
     margin-right: 20px
-    width: 100px
+    width: 155px
+    padding: 0
 
     li
       text-overflow: ellipsis
