--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -1,7 +1,8 @@
 @import 'normalize'
+@import 'colorPicker'
 
 body
-  background: #E7E9EB 
+  background: #E7E9EB
   padding: 0 50px 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
   color: #666
@@ -32,7 +33,7 @@ a
 .mainTitle
   color: #A51;
   font-family: Satisfy
-  font-size: 80px   
+  font-size: 80px
   margin: 0
   text-align: center
   text-shadow: 0 1px 2px #010202
@@ -42,7 +43,7 @@ button
   display: inline-block
   margin: 5px 0 0 5px
 
-#canvas 
+#canvas
   border: 1px dashed #DDD
   display: inline-block
   float: left
