updated style & template

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -3,6 +3,7 @@
 
 body
   background: #E7E9EB
+  background-image: url('../img/cross_scratches.png')
   padding: 0 50px 50px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
   color: #666
