--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -45,12 +45,14 @@ button
   margin: 5px 0 0 5px
 
 #canvas
-  border: 1px dashed #DDD
+  border: 1px dashed #A3A3A3
+  cursor: crosshair
   display: inline-block
   float: left
-  height: 400px
+  height: 350px
   margin: 10px
-  width: 600px
+  width: 320px
+  user-select: none
 
 
 footer
@@ -58,3 +60,4 @@ footer
   margin-top: 20px
 
 
+@import 'mobile'
