--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -13,15 +13,19 @@ a
 #main
   background: white
   box-shadow: 0 0 10px #888
+  box-sizing: border-box
   width: 800px
   margin: auto
   padding: 10px
   overflow: hidden
 
+  .controls
+    margin-top: 10px
+
   ol
-    float: left
+    display: inline-block
     margin-right: 20px
-    width: 155px
+    margin-left: 20px
     padding: 0
 
     li
@@ -42,7 +46,7 @@ a
 
 button
   display: inline-block
-  margin: 5px 0 0 5px
+  margin: 5px 5px 0 5px
 
 #canvas
   border: 1px dashed #A3A3A3
